# hd98

./: .gitignore  CMakeLists.txt  README.md
docs/: .buildinfo  conf.py  cpp_api.html  cpp_api.rst  genindex.html  index.html  index.rst  installation.html  installation.rst  objects.inv  py-modindex.html  py_api.html  py_api.rst  search.html  searchindex.js  theory.html  theory.rst  tutorial.html
docs/.doctrees/: cpp_api.doctree  environment.pickle  index.doctree  installation.doctree  py_api.doctree  theory.doctree  tutorial.doctree
docs/breathe/doxygen/: hd98.cfg
docs/breathe/doxygen/hd98/xml/: classhd98_1_1_composite.xml  classhd98_1_1_halm_dragon1998.xml  classhd98_1_1_hooke.xml  composite_8hpp.xml  dir_d44c64559bbebec7f509842c48db8b23.xml  dir_f68b81ffb4581ae30fb9ca1eee071683.xml  halm__dragon__1998_8hpp.xml  hd98_8hpp.xml  hooke_8hpp.xml  index.xml  namespacehd98.xml
example/: CMakelists.txt  README.md  example_hd98.cpp
include/: CMakeLists.txt
include/hd98/: composite.hpp  halm_dragon_1998.h  halm_dragon_1998.hpp  hd98.h  hd98.hpp  hooke.h  hooke.hpp
metadata/: description.txt  repository.txt
python/: pyhd98.cpp  setup.cfg  setup.py
python/hd98/: core.py  halm_dragon_1998.py  hooke.py
python/pyhd98/: __init__.py  core.py  halm_dragon_1998.py
python/tests/: test_composite.py  test_global_update.py  test_halm_dragon_1998.py  test_hd98.py  test_hooke.py
sandbox/: stress-driven_experiment.py
sphinx/: .gitignore  conf.py  cpp_api.rst  py_api.rst  theory.rst  tutorial.rst
src/: CMakeLists.txt  config.cmake.in  halm_dragon_1998.c  halm_dragon_1998.cpp  hd98.c  hd98.cpp  hd98.h  hooke.c  hooke.cpp  meson.build  test_hd98.c
tests/: CMakeLists.txt  test_halm_dragon_1998.c  test_halm_dragon_1998.cpp  test_halm_dragon_1998.hpp  test_hd98.c  test_hd98.cpp  test_hd98.h  test_hd98.hpp  test_hooke.c  test_hooke.cpp  test_hooke.hpp
